Recent edits: references and FAQs

--- a/ar/diagnosis.html
+++ b/ar/diagnosis.html
@@ -140,12 +140,12 @@
                 <p class="fs-4 mb-0 fw-bold">الأعراض</p>
                 <p>عادة ما يتم تشخيص فرط التعرق الإبطي الأولي الشديد عندما يكون الشخص قد عانى على الأقل 6 أشهر من التعرق المفرط تحت الإبط (بدون سبب معروف) ولديه أيضًا خاصيتان أخريان على الأقل مذكورتان أدناه:<sup>1</sup></p>
                 <ul class="custom-icon-list list-icon-1">
-                  <li>كلا الإبطين يتأثران</li>
-                  <li>إختلال الأنشطة اليومية</li>
-                  <li>يحدث مرة واحدة على الأقل في الأسبوع</li>
-                  <li>سن البداية (أول تجربة) أقل من 25 سنة</li>
-                  <li>وجود تاريخ عائلي من التعرق المفرط</li>
-                  <li>لا يحدث التعرق المفرط أثناء النوم</li>
+                  <li>كلا الإبطين يتأثران<sup>1</sup></li>
+                  <li>إختلال الأنشطة اليومية<sup>1</sup></li>
+                  <li>يحدث مرة واحدة على الأقل في الأسبوع<sup>1</sup></li>
+                  <li>سن البداية (أول تجربة) أقل من 25 سنة<sup>1</sup></li>
+                  <li>وجود تاريخ عائلي من التعرق المفرط<sup>1</sup></li>
+                  <li>لا يحدث التعرق المفرط أثناء النوم<sup>1</sup></li>
                 </ul>
                 <p class="fs-4 mb-0 fw-bold">الاختبارات</p>
                 <p>قد تحتاج إلى اختبار واحد أو أكثر للمساعدة في تحديد سبب التعرق الشديد بجسمك. قد تؤكد اختبارات الدم أو البول أو تستبعد وجود حالة طبية أساسية.
