--- a/ar/index.html
+++ b/ar/index.html
@@ -215,7 +215,7 @@
                   </div>
                 </div>
 
-                <p class="h3 pt-3 text-start">٦٥٪ من المرضى المصابين بفرط التعرق يعانون من فرط التعرق الإبطي</p>
+                <p class="h3 pt-3 text-start">٦٥٪ من المرضى المصابين بفرط التعرق يعانون من فرط التعرق الإبطي<sup>1</sup></p>
 
               </div>
             </div>
